Fix icon color
Some styles change the .icon color, making it in some cases, hard to see.

--- a/styles/prosilver/theme/css/colors.css
+++ b/styles/prosilver/theme/css/colors.css
@@ -21,6 +21,10 @@ details.spoiler,
 
 .spoiler-status {
 	background-color: #d9534f;
+}
+
+.spoiler-status,
+.spoiler-status > .icon {
 	color: #fff;
 }
 
